--- a/source/notebooks/build_topic_modelling.ipynb
+++ b/source/notebooks/build_topic_modelling.ipynb
@@ -1006,6 +1006,7 @@
     "\n",
     "# # Run the headline ID above to identify the error after adjusting the (try) statement. \n",
     "# # Usually if POS tag has an empty result, it is due to issue related to long characters. \n",
+    "# # The maximum # of character is 25,000. \n",
     "# wikifier_res = wikifier_extract(df_business.loc[923, \"article_text\"], lang=\"en\", threshold=0.8) \n",
     "\n",
     "print(\n",
