--- a/source/notebooks/explore_embeddings.ipynb
+++ b/source/notebooks/explore_embeddings.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,20 +453,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(46084418, 77474500)"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Uncomment this part if you want to build the embeddings. \n",
     "\n",
@@ -498,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +510,7 @@
     {
      "data": {
       "text/plain": [
-       "<gensim.models.fasttext.FastText at 0x7fab92a4fdc0>"
+       "<gensim.models.fasttext.FastText at 0x7ff687a34f40>"
       ]
      },
      "execution_count": 9,
@@ -545,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +562,7 @@
        "  ('Covid-19', 0.3344852924346924)])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +592,7 @@
        "  ('13', 1.2661775350570679)])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +622,7 @@
        "  ('economy', 1.2784146070480347)])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +652,7 @@
        "  ('producers', 0.22448354959487915)])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
