Changed versioning function.

--- a/source/notebooks/build_mktmv_regression.ipynb
+++ b/source/notebooks/build_mktmv_regression.ipynb
@@ -1600,8 +1600,7 @@
     "# # to run this part. \n",
     "\n",
     "# mlpipe_name = \"mlpipe_topic\" \n",
-    "# dev_status, version = manage_files.resume_version(DIR_MLTOPIC, dev_status=True) \n",
-    "# mlpipe_topic = manage_files.load_cache_pk(dir=DIR_MLTOPIC, filename=f\"{dev_status}/{mlpipe_name}_v{version - 1}.pickle\") \n",
+    "# mlpipe_topic = manage_files.load_version_pk(dir=DIR_MLTOPIC, obj_name=mlpipe_name, version_load=\"latest\") \n",
     "\n",
     "# # Extract topics or themes. \n",
     "# df_marketnews[\"theme\"] = np.argmax(mlpipe_topic.transform(df_marketnews[\"theme_sub\"]), axis=1) \n",
@@ -1934,8 +1933,7 @@
     "\n",
     "# Load Topic model pipeline. \n",
     "mlpipe_name = \"mlpipe_topic\" \n",
-    "dev_status, version = manage_files.resume_version(DIR_MLTOPIC, dev_status=True) \n",
-    "mlpipe_topic = manage_files.load_cache_pk(dir=DIR_MLTOPIC, filename=f\"{dev_status}/{mlpipe_name}_v{version - 1}.pickle\") \n",
+    "mlpipe_topic = manage_files.load_version_pk(dir=DIR_MLTOPIC, obj_name=mlpipe_name, version_load=\"latest\") \n",
     "\n",
     "# Run this to preview the processing pipeline. \n",
     "df_features = ColumnSelector(var_proc=[\"headline\", \"theme_sub\"]).fit_transform(X_train) \n",
@@ -2766,10 +2764,8 @@
    "source": [
     "# # Cache the vectorized output. \n",
     "# mlpipe_name = \"mlpipe_estim\" \n",
-    "# dev_status, version = manage_files.resume_version(DIR_MLESTIM, dev_status=True) \n",
-    "# manage_files.save_cache_pk(dir=DIR_MLESTIM, filename=f\"{dev_status}/{mlpipe_name}_v{version}.pickle\", object=mlpipe_estim) \n",
-    "# manage_files.update_version(DIR_MLESTIM, version, dev_status=True) \n",
-    "# mlpipe_topic_loaded = manage_files.load_cache_pk(dir=DIR_MLESTIM, filename=f\"{dev_status}/{mlpipe_name}_v{version}.pickle\") "
+    "# manage_files.save_version_pk(dir=DIR_MLESTIM, obj_name=mlpipe_name, object=mlpipe_topic) \n",
+    "# mlpipe_estim_loaded = manage_files.load_version_pk(dir=DIR_MLESTIM, obj_name=mlpipe_name, version_load=\"latest\") "
    ]
   }
  ],
