--- a/source/notebooks/build_topic_modelling.ipynb
+++ b/source/notebooks/build_topic_modelling.ipynb
@@ -2463,10 +2463,8 @@
     "\n",
     "# # Cache the vectorized output. \n",
     "# mlpipe_name = \"mlpipe_topic\" \n",
-    "# dev_status, version = manage_files.resume_version(DIR_MLTOPIC, dev_status=True) \n",
-    "# manage_files.save_cache_pk(dir=DIR_MLTOPIC, filename=f\"{dev_status}/{mlpipe_name}_v{version}.pickle\", object=mlpipe_topic) \n",
-    "# manage_files.update_version(DIR_MLTOPIC, version, dev_status=True) \n",
-    "# mlpipe_topic_loaded = manage_files.load_cache_pk(dir=DIR_MLTOPIC, filename=f\"{dev_status}/{mlpipe_name}_v{version}.pickle\") "
+    "# manage_files.save_version_pk(dir=DIR_MLTOPIC, obj_name=mlpipe_name, object=mlpipe_topic) \n",
+    "# mlpipe_topic_loaded = manage_files.load_version_pk(dir=DIR_MLTOPIC, obj_name=mlpipe_name, version_load=\"latest\") "
    ]
   }
  ],
